# shazam-piano

./: .editorconfig  .gitignore  AGENTS.md  ANALYSE_CASCADE_BUGS_SESSION4.md  ANALYSE_CASCADE_TYPE_FIX.md  ANALYSE_COMPLETE_SESSION3.md  ANALYSE_STRUCTURELLE_BUGS.md  AUDIT_FIX_REPORT.md  BUG_FIXES_SESSION3.md  BUG_MASTER_REFERENCE.md  CHANGELOG.md  CHATGPT_ANALYSE_BUGS.md  CHATGPT_ANALYSE_BUGS_V2.md  CHATGPT_ANALYSE_COMPLETE.md  CHATGPT_ANALYSE_ILLUMINATION.md  CHATGPT_ANALYSE_SIMPLE.md  CHATGPT_ANALYSE_VIDEO.md  CHATGPT_PROMPT_SIMPLE.md  CODEX_SYSTEM.md  EARLY_NOTES_BUG_FIX_PR.md  GHOST_NOTES_PR_SUMMARY.md  GUIDE_RAPIDE_LANCEMENT.md  HANDOFF_SESSION4_CONTINUATION.md  LEADINMICFX_PR_REPORT.md  MICENGINE_ARCHITECTURE.md  Makefile  PATCH2_COUNTDOWN_MICRO_FIXES.md  PROJECT_MAP.md  PROMPT_CHATGPT_VIDEO_ANALYSIS.md  PROMPT_DEBUG_VIDEO.md  PROMPT_HANDOFF.md  QUICK_DEV_WORKFLOW.md  QUICK_START.md  README.md  REPERAGE_SESSION4.md  ROADMAP_FEATURES.md  SENIOR_FIXUP_PR_REPORT.md  SESSION4_BUGFIX_REPORT.md  STATUS.md  TASK_TEMPLATE.md  (+5 more)
OneDrive/Bureau/shazam piano/backend/: .dockerignore  Dockerfile  README.md  app.py  arranger.py  config.py  firebase_client.py  fly.toml  inference.py  pyproject.toml  railway.toml  render.py  requirements.txt  separation.py  test_api.py  test_arranger.py  test_inference.py
_archive_debug_sessions/: ANALYSE_CASCADE_SESSION3.md  ANALYSE_GLOBALE_CASCADE.md  CHATGPT_AUDIT_RESULTS.md  FIX_AUDIT_NOTES_POSITIONING.md  FIX_BUFFER_CONFLICT.md  NUKE_ET_REBUILD.ps1  PROMPT_CHATGPT_AUDIT_FINAL.md  PROMPT_CHATGPT_ULTIMATE.md  PROMPT_CHATGPT_VIDEO_ANALYSIS.md  README_SYNTHESE.md  REBUILD_COMPLET.ps1  REFLEXION_CROISEE_BUGS.md  REPONSE_CHATGPT_CODE.md  SESSION4_CORRECTIFS_CASCADE_APPLIQUES.md  SESSION4_PROGRESS_REPORT.md  SESSION4_PROMPT_SCORING_REFACTOR.md  debuglogcatflutterbackend  log cat back end flutter
app/: .ci-trigger  README.md  debug  log cat back end flutter  pubspec.yaml
app/android/: .gitignore  (+5 more)
backend/: .dockerignore  README.md  app.py  arranger.py  config.py  identify.py  inference.py  render.py  requirements.txt  test_arranger.py  test_expected_notes_export.py  test_inference.py
docs/: APP_EXPLANATION.md  APP_FLOW_IMPLEMENTED.md  AUTOMATION_LIMITS.md  FAQ.md  FIREBASE_QUICK_SETUP.md  GOOGLE_PLAY_SETUP.md  PLAY_RELEASE_CHECKLIST.md  SETUP_FIREBASE.md  TROUBLESHOOTING.md  UI_SPEC.md  patch_ledger_practice.md
infra/: docker-compose.yml
scripts/: README.md  apply-codex-patch.ps1  deploy.sh  dev.ps1  firebase-auto-setup.sh  run-app.ps1  setup.ps1  setup.sh  test.sh
(+235 files in other folders)
